FIX BUG: message overflow. Refactor chat component styles and HTML structure; add dropdown functionality and improve member/channel lists

--- a/frontend/src/chat/chat.component.css
+++ b/frontend/src/chat/chat.component.css
@@ -16,7 +16,7 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  width: 100vw;
+  width: 100%;
 }
 .separator {
   align-self: center;
@@ -248,7 +248,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  max-height: 88%;
+  max-height: 100%;
   padding-top: 0;
   width: 100%;
 }
@@ -265,12 +265,14 @@ body {
   -ms-overflow-style: none;
 }
 .channel-list li {
+  align-items: center;
   background-color: #2b2d31;
   border: none;
   border-radius: 10px;
   color: #949ba4;
   cursor: pointer;
   display: flex;
+  justify-content: center;
   margin: 1px 0;
   max-height: 3rem;
   max-width: 95%;
@@ -287,7 +289,6 @@ body {
   color: #f3fcff;
 }
 
-
 /*Chat Box*/
 .chat-box {
   background-color: #313338;
@@ -295,8 +296,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
-  max-width: 72%;
-  min-width: 72%;
+  width: auto;
   overflow-y: auto;
   scrollbar-width: none;
   -ms-overflow-style: none;
@@ -307,7 +307,7 @@ body {
   border-bottom: 2px solid #35363c;
   display: flex;
   flex-shrink: 0;
-  height: 7%;
+  height: 3rem;
   justify-content: center;
   padding: 0;
   position: relative;
@@ -334,30 +334,19 @@ body {
   height: 93%;
   margin: 0;
   overflow-y: auto;
-  padding: 0;
+  padding: 10 px;
   scrollbar-width: none;
   width: 100%;
   -ms-overflow-style: none;
 }
 .message {
-  align-items: center;
-  background-color: #313338;
-  border: none;
-  border-radius: 10px;
-  color: #bbbdc1;
-  cursor: pointer;
+  margin: 5px auto;
+  padding: 5px;
   display: flex;
   flex-direction: row;
-  gap: 5px;
-  margin: 5px 0;
-  max-height: auto;
-  max-width: 100%;
-  min-height: 50px;
-  min-width: 100%;
-  overflow: hidden;
-  padding: 5px;
-  text-align: left;
-  white-space: nowrap;
+  gap: 15px;
+  padding: 0;
+  margin: 0;
 }
 .message:hover {
   background-color: #2e3035;
@@ -371,10 +360,10 @@ body {
   flex-direction: column;
   justify-content: center;
   margin: 5px;
-  max-height: 35px;
-  max-width: 35px;
-  min-height: 35px;
-  min-width: 35px;
+  max-height: 2.25rem;
+  max-width: 2.25rem;
+  min-height: 2.25rem;
+  min-width: 2.25rem;
   padding: 5px;
 }
 .message-content {
@@ -382,11 +371,11 @@ body {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  height: auto;
+  /* height: auto; */
   justify-content: center;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: auto;
 }
 .message-header {
   align-items: flex-start;
@@ -415,20 +404,9 @@ body {
   padding: 0;
 }
 .message-text {
-  background-color: inherit;
-  border: none;
-  color: #bbbdc1;
-  display: flex;
-  flex-direction: column;
-  font: 16px Arial, sans-serif;
-  gap: 3px;
-  margin: 0;
-  overflow: hidden;
-  padding-left: 7px;
-  resize: none;
-  text-align: left;
-  white-space: nowrap;
-  width: 90%;
+  padding: 5px;
+  text-align: justify;
+  width: 95%;
 }
 .input-container {
   background-color: #383a40;
@@ -476,10 +454,12 @@ body {
   flex-direction: column;
   height: 100%;
   margin: 0;
-  max-width: 12%;
-  min-width: 12%;
+  max-width: 15rem;
+  min-width: 15rem;
   right: 0;
   width: auto;
+  /* position: absolute; */
+  right: 0;
 }
 .channel-setting {
   align-items: center;
@@ -542,10 +522,58 @@ body {
   overflow-y: auto;
   padding-top: 5px;
   scrollbar-width: none;
-  width: 90%;
+  width: 100%;
   -ms-overflow-style: none;
+  position: absolute;
+  right: 0;
 }
+.dropbtn {
+  background-color: #3498db;
+  color: white;
+  border-radius: 10px;
+  width: 100%;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #2980b9;
+}
+
 .dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  background-color: #ddd;
+}
+
+.show {
+  display: block;
+}
+
+/* .dropdown {
   background-color: #2b2d31;
   border: 1px solid #35363c;
   border-radius: 12px;
@@ -828,4 +856,4 @@ body {
 }
 .webkit-scrollbar:hover::-webkit-scrollbar-thumb {
   background: #c1c2c5;
-}
+} */
